remove circular button, make 7px, extra info subs list temps, centered dao interface, combine facets with view_more button,

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -97,7 +97,7 @@ template(name='sbt')
                 
 template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
-    .ui.zoomer.basic.button.set_session_v(class=calculated_class title=t)
+    .ui.zoomer.basic.icon.compact.button.set_session_v(class=calculated_class title=t)
         // if i
         if selected 
             // +i n=i cl='ui mini inline image'
@@ -107,9 +107,9 @@ template(name='skve')
             i.grey.icon(class=i)
         unless ionly
             if l
-                |#{l}
+                span.say_this #{l}
             else 
-                |#{v}
+                span.say_this #{v}
 
                         
 
