--- a/client/subreddits.jade
+++ b/client/subreddits.jade
@@ -21,9 +21,15 @@ template(name='subreddits')
                             a.ui.tiny.image.goto_sub(href="/subreddit/#{data.display_name}")
                                 img.ui.rounded.zoomer.image(src=data.icon_img)
                             .content.say_this
-                                a.header.goto_sub(href="/subreddit/#{data.display_name}")
+                                a.ui.header.goto_sub(href="/subreddit/#{data.display_name}")
                                     | !{data.display_name}
+                                a.ui.small.grey.header.goto_sub(href="/subreddit/#{data.display_name}")
+                                    | !{data.header_title}
+                                // span.description !{data.public_description_html}
                                 span.description !{data.public_description}
-                                    if in_dev
-                                        +print_this
+                                span.say_this
+                                    i.money.icon
+                                    |#{data.advertiser_category}
+                                if in_dev
+                                    +print_this
 
