--- a/client/s.css
+++ b/client/s.css
@@ -631,10 +631,10 @@ input {
 
 
 .button, .selector, .card, .dark_mode, .ui.header, .ui.label, p, img{
-    animation: fadein .25s !important;
-    /*-webkit-transition: opacity .25s ease-in !important;*/
-    /* -webkit-transition: opacity .25s ease-out; */
-    animation: fadeout .25s; 
+    /*animation: fadein .1s !important;*/
+    /*-webkit-transition: opacity .1s ease-in !important;*/
+    /* -webkit-transition: opacity .1s ease-out; */
+    /*animation: fadeout .1s; */
 }
 
 
