--- a/client/reddit.jade
+++ b/client/reddit.jade
@@ -1,165 +1,35 @@
 template(name='reddit')
-    .ui.stackable.grid
+    .ui.stackable.padded.grid
         .row
-            .sixteen.wide.center.aligned.column
-                // a.icon.ui.big.circular.icon.button.zoomer(href='/')
-                //     i.large.yin.yang.grey.icon
-                // unless viewing_doc
-                if selected_tags
-                    // if many_tags
-                    //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
-                    //         i.remove.icon
-                    each selected_tags
-                        +unselect_tag
-                // i.big.icon(class=search_icon_class)
-                .ui.left.icon.large.input(class=thinking_class)
+            // .four.wide.column
+            .sixteen.wide.column
+                // a.ui.large.circular.basic.button(href="/reddit") 
+                //     i.reddit.icon
+                //     |reddit
+                +cloud filter='subreddit'
+                .ui.inline.header.search_subs
+                    |#{subreddit_docs.count} subs
+                .ui.icon.input
                     i.search.icon
-                    // if skv_is 'thinking' true
-                    //     i.big.yin.yang.loading.icon
-                    // else 
-                    //     i#clear_tags.link.yin.yang.big.icon(class=thinking_class)
-                    // i.search.grey.icon
-                    input.search_title(type='text' autofocus='' placeholder=doc_count)
-                if selected_tags
-                    each tag_results
-                        +tag_selector
-                // .ui.header 
-                //     i.smile.large.grey.icon
-                //     |emotion
-                // .spacer
-                // .four.wide.column
-                // .ui.large.basic.label(title='results') #{doc_count} results
-                // .ui.basic.circular.button(title='when')
-                // i.clock.icon
-                // +i n='clock' cl='ui mini inline image'
-                // |when
-                // .ui.basic.button(title='where')
-                    // i.marker.icon
-                // div
-                // .ui.inline.header 
-                //     +i n='reddit' cl='ui mini inline image'
-                //     |subreddit
-                // each subreddit_results
-                //     +tag_selector
-                //     // .ui.compact.small.tertiary.add_tag.button #{name}
-                // +skve k='view_mode' v='posts' l='posts' i='blog'
-                // +skve k='view_mode' v='wikipedia' l='wikipedia' i='wikipedia'
-                // // +skve k='view_mode' v='stack' l='stack' i='stackoverflow'
-                // +skve k='view_mode' v='image' l='image' i='image'
-                // // +skve k='view_mode' v='github' l='github' i='github'
-                // // +skve k='view_mode' v='porn' l='porn' i='mercury'
-                // +skve k='view_mode' v='video' l='youtube' i='youtube'
-                // div
-                // if skv_is 'view_mode' 'stack'
-                //     +icon n='globe' cl='ui mini inline image' t='company'
-                //     |site
-                //     each site_results
-                //         +tag_selector
+                    input.search_subreddits(type='text')
+                .scrolling.ui.items
+                    unless subreddit_docs.count
+                        .ui.center.aligned.basic.segment
+                            i.massive.yin.yang.grey.loading.icon
+                    each subreddit_docs
+                        .ui.item  
+                            a.ui.tiny.image.goto_sub(href="/subreddit/#{data.display_name}")
+                                img.ui.rounded.zoomer.image(src=data.icon_img)
+                            .content.say_this
+                                a.ui.header.goto_sub(href="/subreddit/#{data.display_name}")
+                                    | !{data.display_name}
+                                a.ui.small.grey.header.goto_sub(href="/subreddit/#{data.display_name}")
+                                    | !{data.header_title}
+                                // span.description !{data.public_description_html}
+                                span.description !{data.public_description}
+                                span.say_this
+                                    i.money.icon
+                                    |#{data.advertiser_category}
+                                if in_dev
+                                    +print_this
 
-                +skve k='view_more' v=true l='more' i='bars' ionly=false
-                if skv_is 'view_more' true
-                    +skve k='view_locations' v=true l='locations' i='marker' ionly=false
-                    if skv_is 'view_locations' true
-                        each location_results
-                            +tag_selector
-                    +skve k='view_people' v=true l='people' i='user outline' ionly=false
-                    if skv_is 'view_people' true
-                        each person_results
-                            +tag_selector
-                    +skve k='view_facilities' v=true l='facilities' i='building' ionly=false
-                    if skv_is 'view_facilities' true
-                        each facility_results
-                            +tag_selector
-                    +skve k='view_companies' v=true l='companies' i='briefcase' ionly=false
-                    if skv_is 'view_companies' true
-                        each company_results
-                            +tag_selector
-                    each tvshow_results
-                        +tag_selector
-                        // .ui.compact.small.tertiary.add_tag.button #{name}
-                    +icon n='building' cl='ui mini inline image' t='organization'
-                    each organization_results
-                        +tag_selector
-                        // .ui.compact.small.tertiary.add_tag.button #{name}
-                    +icon n='trophy' cl='ui mini inline image' t='award'
-                    each award_results
-                        +tag_selector
-                        // .ui.compact.small.tertiary.add_tag.button #{name}
-                    div
-                    .ui.inline.grey.header 
-                        +icon n='paper' cl='ui mini inline image'
-                        // |print media
-                        // |where
-                    each print_results
-                        +tag_selector
-                        // .ui.compact.small.tertiary.add_tag.button #{name}
-                    +icon n='sport' cl='ui mini inline image' t='sport'
-                    each sport_results
-                        +tag_selector
-                        // .ui.compact.small.tertiary.add_tag.button #{name}
-                    +icon n='movie' cl='ui mini inline image' t='movie'
-                    each movie_results
-                        +tag_selector
-                        // .ui.compact.small.tertiary.add_tag.button #{name}
-                    each selected_emotions
-                        .ui.black.compact.button.unselect_emotion
-                            |#{this}
-                    each emotion_results
-                        if name
-                            .ui.compact.basic.circular.button.select_emotion
-                                |#{name}
-            if selected_tags
-                .sixteen.wide.center.aligned.column
-                    .scrollin
-                        if alpha
-                            +alpha
-                        // each ducks
-                        //     +duck 
-                        |#{reddit_docs.count}
-                        // if viewing_reddit
-                        // .ui.dropdown
-                        //     // span.text limit
-                        //     i.dropdown.icon
-                        //     .menu 
-                        //         +skve k='limit' v=1 l='1'
-                        //         +skve k='limit' v=10 l='10'
-                        //         +skve k='limit' v=20 l='20'
-                        //         // .item 1
-                        //         // .item 5
-                        //         // .item 10
-                        //         // .item 20
-                        // |sort
-                        // +skve k='sort_key' v='_timestamp' l='when' i='clock'
-                        // +skve k='sort_key' v='points' l='points' i='leaderboard'
-                        // +skve k='sort_direction' v=-1 l='u' i='caret-up'
-                        // +skve k='sort_direction' v=1 l='d' i='caret-down'
-                        // |view
-                        // +skve k='view_mode' v='cards' l='cards' i='clone' ionly=false
-                        // +skve k='view_mode' v='list' l='list' i='list' ionly=false
-                        if skv_is 'view_mode' 'list'
-                            .ui.large.list 
-                                each reddit_docs
-                                    .item
-                                        if is_image
-                                            img.ui.small.image.pointer.zoomer.toggle_view(src=url)
-                                        else if watson.metadata.image
-                                            img.ui.rounded.small.pointer.zoomer.image.toggle_view(src=watson.metadata.image)    
-                                        .content
-                                            .header 
-                                                |#{title}
-                        else 
-                            .ui.centered.stackable.cards
-                                each reddit_docs
-                                    +reddit_doc
-                            
-                        // else if skv_is 'main_section' 'wikipedia'
-                        .ui.inline.header
-                            i.large.wikipedia.icon
-                            |#{wiki_docs.count} wikipedia
-                        .ui.cards
-                            each wiki_docs
-                                +reddit_doc
-                
-                    
-template(name='i')
-    i.icon(name=i)
