--- a/client/s.css
+++ b/client/s.css
@@ -168,19 +168,23 @@ html.ios body {
 .topnav.menu > .item {
   border-radius: 20px !important;
 }
-/*.topnav.menu {*/
-    /*border-radius: 0 0 10px 10px !important; */
-    /*transition: background-color 3s ease !important;*/
-    /*background-color: rgba(250,250,250,1) !important; */
-    /*background-color: rgba(50,110,100,1) !important; */
-
-    /* opacity: .7 !important; */
-/*    overflow-y:hidden;*/
-/*    overflow-x:scroll;*/
-    /* padding-top: .2em; */
-    /* padding: .2em; */
-    /*margin-bottom: 4em; */
-/*}*/
+.topnav > .item.active {
+  background: black !important;
+  
+}
+.topnav.menu {
+  border-radius: 0 0 10px 10px !important; 
+  transition: color 3s ease !important;
+  /*background-color: rgba(250,250,250,1) !important; */
+  /*background-color: rgba(50,110,100,1) !important; */
+  
+  /*opacity: .7 !important; */
+  /*overflow-y:hidden;*/
+  /*overflow-x:scroll;*/
+  /*padding-top: .2em; */
+  /*padding: .2em; */
+  /*margin-bottom: 4em; */
+}
 .hscroll {
     /*border-radius: 0 0 10px 10px !important; */
     transition: background-color 3s ease !important;
